<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.camera.CameraActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/preview_image_layout"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="40dp"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/preview_image"
                android:contentDescription="@string/preview_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/preview_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview_image"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@id/preview_image"
                app:layout_constraintEnd_toEndOf="@id/preview_image"
                app:layout_constraintBottom_toBottomOf="@id/preview_image"
                app:layout_constraintTop_toTopOf="@id/preview_image"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button_camera"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="28dp"
        android:text="@string/take_picture"
        app:strokeColor="@color/primary"
        app:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/preview_image_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_detect"/>

    <Button
        android:id="@+id/button_detect"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="28dp"
        android:text="@string/detect_image"
        app:layout_constraintTop_toBottomOf="@id/button_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>